<resources>
    <string name="app_name">Goswami Mathematics</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_n_your_account">Create Your Account</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign up</string>

    <string name="forget_password">Forgot Password?</string>
    <string name="no_account">No Account?</string>
    <string name="register_with_us">Register With Us!</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome to Mathematics Goswami</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share App</string>
    <string name="munu_contact_us">Contact Us</string>

    <string name="this_is_title">This is Title</string>
    <string name="this_is_sub_titile">This is Sub Title</string>
    <string name="live_class">Live Class</string>
    <string name="all_courses">All Courses</string>
    <string name="free_videos">Free Videos</string>
    <string name="free_pdf">Free Pdf</string>
    <string name="test_series">Test Series</string>
    <string name="my_courses">My Courses</string>
    <string name="live_classes_ads">Live Classes Ads</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_out">Log Out</string>

    <string name="isAppFirstTime">isAppFirstTimeOpened</string>
    <string name="isUserLoggedIn">isUserLoggedIn</string>

    <string name="splash_name">Goswami \nMathematics</string>
    <string name="pie_icon">Pie icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="oops">OOPS!</string>
    <string name="please_check_your_connection">Please check your connection</string>
    <string name="retry">Retry</string>
    <string name="doubt">Doubts?</string>
    <string name="about_us">About Us</string>
    <string name="legals">Legals</string>

</resources>