<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />

    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/menu_share" />


        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_baseline_contact_support_24"
            android:title="@string/munu_contact_us" />

    </group>

</menu>