<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryLightDemo"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:tint="@color/AccentDemo"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_signal_wifi_off_24"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oops"
        android:textStyle="bold"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/AccentDemo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/AccentDemo"
        android:textSize="25sp"
        android:text="@string/no_internet_connection"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/AccentDemo"
        android:textSize="18sp"
        android:text="@string/please_check_your_connection"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRetry"
        android:layout_margin="50dp"
        android:background="@drawable/button_shape"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:text="@string/retry"/>

</LinearLayout>